# ees-natural-language-search

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  azure-pipelines.yml  function_app.py  host.json  local.settings.example.json  pyproject.toml  requirements.txt
clients/: ees_data_api_client.py  openai_client.py
common/: data_utils.py  filter_selection.py  geography_levels_utils.py  indicator_selection.py  llm_response_parser.py  openai_client.py  reranker.py  retrieve_datasets.py  schemas.py  search_client.py  time_period_selection.py  workflow.py
core/: app.py  config.py  logging_config.py
pipelines/templates/jobs/: deploy-function-app.yml  python-build.yml
pipelines/templates/stages/: ci.yml  deploy.yml
pipelines/templates/steps/function-app/: azure-function-app-deploy.yml
pipelines/templates/steps/python/: publish.yml  setup.yml  test.yml
routes/: healthcheck.py  natural_language_search_function.py  vectorizer_middleware.py
schemas/: base_models.py  dataset.py  dataset_with_subject_meta.py  event_responses.py  filter_selection_response.py  final_dataset_response.py  indicator_selection_response.py  llm_validation_error.py  relevant_dataset_response.py  reranker_dataset_response.py  reranker_response.py  reranking_agent_result.py  subject_meta.py  subject_meta_response.py  time_period_selection_response.py  token_usage.py  workflow_response.py
tools/data-sync/: .gitignore  README.md  config.example.ini  requirements.txt  upload_data_files.ipynb
