[project]
name = "ees-natural-language-search"
version = "0.1.0"
description = "Azure-hosted API that turns plain English queries into ranked EES dataset recommendations"
readme = "README.MD"
requires-python = "==3.14.3"
license = { file = "LICENSE"}
dependencies = [
    "azure-functions==2.1.0",
    "azure-identity-broker==1.3.0",
    "azure-search-documents==11.6.0",
    "azure-storage-blob==12.28.0",
    "azurefunctions-extensions-http-fastapi==1.0.1",
    "fastapi==0.136.3",
    "openai==2.30.0",
    "rapidfuzz==3.14.5",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "pre-commit>=4.0.0"
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 88
